# deltasink

./: Cargo.toml  LICENSE  README.md
avroarrow/: Cargo.toml
avroarrow/src/: lib.rs  record.rs  schema.rs
avroarrow/tests/: record_test.rs  schema_test.rs
avroarrow/tests/data/: address.avsc  contact.avsc  example.avsc  person.avsc
deltasink/: Cargo.toml
deltasink/src/: main.rs
deltasink/src/format/: mod.rs
registry/: Cargo.toml
registry/src/: lib.rs
sregistry/: Cargo.toml
sregistry/src/: avro.rs  client.rs  lib.rs
sregistry/tests/: avro_test.rs  client_test.rs
