[package]
name = "avroarrow"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = "0.17.0"
arrow = "53.1.0"
chrono = "0.4.38"
fake = { version = "3.0.1", features = ["derive", "chrono", "uuid"] }

[dev-dependencies]
fake = "3.0.1"
pretty_assertions = "1.4.1"
serde = "1.0.214"
serde_derive = "1.0.214"
registry = { path = "../registry" }
