[package]
name = "avroarrow"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = { version = "0.17.0", features = ["derive"] }
arrow = "53.2.0"
chrono = "0.4.38"
fake = { version = "3.0.1", features = ["derive", "chrono", "uuid"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"

[dev-dependencies]
fake = "3.0.1"
pretty_assertions = "1.4.1"
serde = "1.0.214"
serde_derive = "1.0.214"
uuid = { version = "1.11.0", features = ["v4"] }
maplit = "1.0.2"
datafusion = "43.0.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
arrow-json = "53.2.0"
serde_json = "1.0.132"
