[package]
name = "sregistry"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = "0.17.0"
ostr = "0.1.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.215"
tracing = "0.1.40"

[dev-dependencies]
futures = "0.3.31"
mockito = "1.6.1"
pretty_assertions = "1.4.1"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "test-util"] }
